Fix the layout issue for IE

--- a/static/scss/dashboard.scss
+++ b/static/scss/dashboard.scss
@@ -173,6 +173,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    .program-course {
+      overflow: hidden;
+    }
   }
 
   .collapse-toggle {
